basic server setup with respondWith helper functions and basic middleware

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ go.work
 
 # don't store environment variables in github
 .env
+
+# ignore instructions directory - temp offline directory
+instructions/
